@@ -127,14 +127,14 @@ class SearchBar:
         self.apply_filter()
 
     def get_value(self):
-        text = self.filter_text.get_text().strip()
+        text = unicode(self.filter_text.get_text()).strip()
         node = self.filter_list.get_active_iter()
         index = self.filter_model.get_value(node,1)
         inv = self.filter_model.get_value(node,2)
         return (index, text, inv)
         
     def apply_filter(self,current_model=None):
-        self.apply_text = self.filter_text.get_text()
+        self.apply_text = unicode(self.filter_text.get_text())
         self.filter_button.set_sensitive(False)
         self.uistate.status_text(_('Updating display...'))
         self.on_apply_callback()
