@@ -1,3 +1,8 @@
+2006-07-25  Alex Roitman  <shura@gramps-project.org>
+	* src/Filters/_SearchBar.py (get_value,apply_filter): Force unicode.
+	* src/Filters/_PersonSidebarFilter.py (get_filter): Force unicode.
+	* src/Filters/_FamilySidebarFilter.py (get_filter): Force unicode.
+
 2006-07-24  Alex Roitman  <shura@gramps-project.org>
 	* configure.in: Bump up the version number.
 	* src/GrampsDb/_GrampsBSDDB.py (find_fidmap): Remove unused method.
